# src/Server/IoTGateway/rules/users.js
@@ -182,9 +182,47 @@ app.post("/emailAuthCheck",async function(req, res) {
     }
 });
 
-//POST /UserCustomValue01 => 改變使用者相關資料
+//POST /Read/UserCustomValue01 => 改變使用者相關資料
 //接收格式：x-www-form-urlencoded
-app.post("/UserCustomValue01", async function(req, res) {
+app.get("/Read/UserCustomValue01", async function(req, res) {
+    const {username} = req.query;
+    const searchSQL = `SELECT username,customvar01 FROM Users WHERE username = '${username}'`;
+  
+    const cnDB = database.cnDB(); 
+    const connection = await cnDB.getConnection();
+  
+    /*檢查使用者是否存在資料庫，若無則直接改變*/
+    console.log(`[${clock.consoleTime()}] HTTP GET /Read/UserCustomValue01`);
+    try {  
+        const [results] = await connection.execute(searchSQL);
+        const customvar01 = results[0].customvar01;
+        if (results.length !== 0) {
+            await connection.execute(searchSQL);
+            console.log(`[${clock.consoleTime()}] ${username} update successfully`);
+            const responseMeta = {
+                code: "1",
+                username: username,
+                customvar01: customvar01
+            };
+            res.send(responseMeta);
+        } else{
+            connection.release();
+            console.log(`[${clock.consoleTime()}] ${username} is Not Found in Database!`);
+            const responseMeta = {code: "0"};
+            res.send(responseMeta);
+        }
+    } catch (error) {  
+        console.log(`[${clock.consoleTime()}] ${username} Error update `);
+        const responseMeta = { code: "-1", error: error.message };
+        res.status(500).send(responseMeta);
+    } finally {
+        connection.release();
+    }
+});
+
+//POST /Set/UserCustomValue01 => 改變使用者相關資料
+//接收格式：x-www-form-urlencoded
+app.post("/Set/UserCustomValue01", async function(req, res) {
     const {username, customvar01 } = req.body;
     const searchSQL = `SELECT username,customvar01 FROM Users WHERE username = '${username}'`;
     var UPDATEUserSQL = `UPDATE Users SET customvar01='${customvar01}' WHERE username='${username}';`;
@@ -193,7 +231,7 @@ app.post("/UserCustomValue01", async function(req, res) {
     const connection = await cnDB.getConnection();
   
     /*檢查使用者是否存在資料庫，若無則直接改變*/
-    console.log(`[${clock.consoleTime()}] HTTP POST /UserCustomValue01`);
+    console.log(`[${clock.consoleTime()}] HTTP POST /Set/UserCustomValue01`);
     try {  
         const [results] = await connection.execute(searchSQL);
         if (results.length !== 0) {
@@ -209,6 +247,100 @@ app.post("/UserCustomValue01", async function(req, res) {
         }
     } catch (error) {  
         console.log(`[${clock.consoleTime()}] ${username} Error update `);
+        const responseMeta = { code: "-1", error: error.message };
+        res.status(500).send(responseMeta);
+    } finally {
+        connection.release();
+    }
+});
+
+
+//POST /Login: 使用者登入
+//接收格式：x-www-form-urlencoded
+app.post("/Login",bruteforce.prevent, async function(req, res) {
+    const {username, password} = req.body;
+    const searchSQL = `SELECT username,password,LoginName,email FROM Users WHERE username = '${username}'`;
+
+    const cnDB = database.cnDB(); 
+    const connection = await cnDB.getConnection();
+  
+    /*檢查使用者是否存在資料庫且比對傳送過來的資料是否一致*/
+    console.log(`[${clock.consoleTime()}] HTTP POST /Login`);
+    try {  
+        const [results] = await connection.execute(searchSQL);
+        if (results.length == 0) {
+            connection.release();
+            console.log(`[${clock.consoleTime()}] ${username} is Not Found!`);
+            const responseMeta = {code: "-1"};
+            res.send(responseMeta); 
+        } else {
+            const hashedPassword = results[0].password;
+            const LoginName = results[0].LoginName;
+            const email = results[0].email;
+            if (await bcrypt.compare(password, hashedPassword)) {
+                console.log(`[${clock.consoleTime()}] ${username} is Login Successful!`);
+                const responseMeta = {
+                    code: "1",
+                    username: username,
+                    LoginName: LoginName,
+                    email: email
+                };
+                res.json(responseMeta);
+            }else{
+                console.log(`[${clock.consoleTime()}] ${username} is Password incorrect!!`);
+                const responseMeta = {code: "0"};
+                res.send(responseMeta);
+            } 
+        }
+    } catch (error) {
+        console.log(`[${clock.consoleTime()}] Error Login`);
+        const responseMeta = { code: "-1", error: error.message };
+        res.status(500).send(responseMeta);
+    } finally {
+        connection.release();
+    }
+});
+
+//POST /emailAuthCheck: 使用者忘記密碼
+//接收格式：x-www-form-urlencoded
+app.post("/emailAuthCheck",async function(req, res) {
+    const {email} = req.body;
+    const searchSQL = `SELECT username,LoginName,email FROM Users WHERE email = '${email}'`;
+
+    const cnDB = database.cnDB(); 
+    const connection = await cnDB.getConnection();
+  
+    /*檢查使用者是否存在資料庫且比對傳送過來的資料是否一致*/
+    console.log(`[${clock.consoleTime()}] HTTP POST /emailAuthCheck`);
+    try {  
+        const [results] = await connection.execute(searchSQL);
+        const username = results[0].username;
+        const LoginName = results[0].LoginName;
+
+        if (results.length !== 0) {
+            if(email === results[0].email){
+                console.log(`[${clock.consoleTime()}] ${email} is Auth Successful!`);
+                const responseMeta = {
+                    code: "1",
+                    username: username,
+                    LoginName: LoginName,
+                    email: email
+                };
+                res.json(responseMeta);
+            }else{
+                console.log(`[${clock.consoleTime()}] ${email} is Auth Fail!!`);
+                const responseMeta = {code: "0"};
+                res.send(responseMeta);
+            } 
+             
+        } else {
+            connection.release();
+            console.log(`[${clock.consoleTime()}] ${email} is Not Found!`);
+            const responseMeta = {code: "-1"};
+            res.send(responseMeta);
+        }
+    } catch (error) {
+        console.log(`[${clock.consoleTime()}] Error Login`);
         const responseMeta = { code: "-1", error: error.message };
         res.status(500).send(responseMeta);
     } finally {
